# auto_apply

./: .gitignore  Pipfile  README.md  google-form-test.ipynb  pyproject.toml  requirements.txt  setup.py
schedule/: com.rs.auto-apply.plist  schedule-run.sh
schedule/linux/: schedule-trigger.sh
schedule/macos/: com.rs.auto-apply.plist  schedule-run.sh
schedule/windows/: AutoApplyTask.xml  run.bat
src/: auto_apply.py
