[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-apply"
version = "0.0.5"
authors = [
    {name = "Richard hih", email = "shihxuancheng@gmail.com"}
]
description = "auto apply leave"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium==4.26.1",
    "tqdm==4.67.0",
    "ntplib==0.4.0",
    "apscheduler==3.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
auto-apply = "auto_apply:main"
